[package]
name = "shuttle-bedrock"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.3.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-sdk-bedrockruntime = { version = "1.24.0", features = ["behavior-version-latest"] }
axum = "0.7.4"
axum-streams = { version = "0.14.2", features = ["json", "text"] }
futures = "0.3.30"
http-body-util = "0.1.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28.2"
